--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+assets/videos/video.mp4 filter=lfs diff=lfs merge=lfs -text
+assets/videos/*.mp4 filter=lfs diff=lfs merge=lfs -text
